# rust-training

./: .gitignore  Cargo.toml  README.md
S00_hello_world/: Cargo.toml
S00_hello_world/src/: main.rs
S01_variables/: Cargo.toml
S01_variables/src/: main.rs
S02_vectors/: Cargo.toml
S02_vectors/src/: main.rs
S03_strings/: Cargo.toml
S03_strings/src/: main.rs
S04_functions/: Cargo.toml
S04_functions/src/: main.rs
S05_control_flows/: Cargo.toml
S05_control_flows/src/: main.rs
S06_ownership/: Cargo.toml
S06_ownership/src/: main.rs
S07_structs/: Cargo.toml
S07_structs/src/: main.rs
S08_lifetimes/: Cargo.toml
S08_lifetimes/src/: main.rs
S09_enums/: Cargo.toml
S09_enums/src/: main.rs
S10_pattern_matching/: Cargo.toml
S10_pattern_matching/src/: main.rs
S11_generics/: Cargo.toml
S11_generics/src/: main.rs
S12_traits/: Cargo.toml
S12_traits/src/: main.rs
S13_built_in_traits/: Cargo.toml
S13_built_in_traits/src/: main.rs
S14_modules/: Cargo.toml
S14_modules/src/: borrow_system.rs  lib.rs  repository.rs
S15_error_handling/: Cargo.toml
S16_testing/: Cargo.toml
S17_closures/: Cargo.toml
S18_smart_pointers/: Cargo.toml
S19_threads/: Cargo.toml
S20_channels/: Cargo.toml
S21_macros/: Cargo.toml
S22_parallelism/: Cargo.toml
S23_asynchronous_programming/: Cargo.toml
S24_file_io/: Cargo.toml
S25_streams/: Cargo.toml  index.html
S26_unsafe_coding/: Cargo.toml
S99_Questions/: Cargo.toml
S99_questions/: Cargo.toml
meth-leb/: Cargo.toml
proc_macros/: Cargo.toml
s27-hello-wasm/: Cargo.toml  package-lock.json
(+55 files in other folders)
